Fixed issue clicking Act I on mobile

--- a/css/cj_css.css
+++ b/css/cj_css.css
@@ -1300,7 +1300,7 @@
     #risingphoenixdesc{
       position:absolute;
       width:90%;
-      height:50%;
+      height:30%;
       font-size:0.95em;
       text-align:center;
       float:none;
